<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="hello">Hello World, MyApp!</string>
    <string name="title">Student Details</string>
    <string name="roll_no">Enter Rollno: </string>
    <string name="name">Enter Name: </string>
    <string name="marks">Enter Marks: </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>
    <string name="show_info">About</string>


    <string name="app_name">Student Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string-array name="country">
        <item>Choose country</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>Nepal</item>
        <item>Afghanistan</item>
        <item>Shrilanka</item>
        <item>Pakistan</item>
        <item>India</item>
        <item>Ameriac</item>
        <item>England</item>
    </string-array>
    <string-array name="district">
        <item>Choose District</item>
        <item>Mymensingh</item>
        <item>Dhaka</item>
        <item>Fridpur</item>
        <item>Thimpu</item>
        <item>Kathmandu</item>
        <item>kolkata</item>
        <item>Islamabad</item>
        <item>Lahor</item>
        <item>Dilli</item>
        <item>Kandahar</item>
        <item>kabul</item>
        <item>Colombo</item>
        <item>Newyork</item>
        <item>Texas</item>
        <item>London</item>
        <item>manchaster</item>
        <item>Kandahar</item>

    </string-array>

</resources>